# crucible

./: .file-size-whitelist  .gitignore  A2A Management - Planning.md  ACP_070_BREAKING_CHANGES.md  ACP_INTEGRATION_WORKING_DOC.md  AGENTS.md  ANTIPATTERN_FIX_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_FINDINGS_SUMMARY.txt  BLAKE3_STREAMING_IMPLEMENTATION.md  BLOCK_STORAGE_GENERIC_REFACTORING.md  BUG_5_FIX_SUMMARY.md  BUG_5_WATCH_MODE_FIX_PLAN.md  BUG_FIX_STATUS.md  BUG_TIMELINE.md  BURN_MODEL_EXAMPLES.md  BURN_MODEL_FORMATS.md  BURN_VERSION_ANALYSIS.md  CANDLE_FACTORY_INTEGRATION_SUMMARY.md  CHANGELOG.md  CLEANUP_SUCCESS_METRICS.md  CLEANUP_SUMMARY.md  CLI_DAEMON_INTEGRATION.md  CLI_REPL_CONSISTENCY_TEST_SUMMARY.md  CLI_REWORK_PROPOSAL.md  CODE_OF_CONDUCT.md  COMMIT_CONVENTIONS.md  COMPLETE_BENCHMARK_RESULTS.md  COMPREHENSIVE_CLEANUP_PLAN.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEDUPLICATION_DETECTOR_REFACTORING.md  DELTA_PROCESSING_PHASE1_SUMMARY.md  DEPRECATED-CODE-MIGRATION-PLAN.md  DOCTEST_REMOVAL_SUMMARY.md  EMBEDDING_PIPELINE_TDD_RED_PHASE_SUMMARY.md  EMBEDDING_TEST_DOCUMENTATION.md  EMBEDDING_TEST_RESTORATION_SUMMARY.md  (+127 more)
benches/: Cargo.toml  README.md  architecture_comparison.rs  basic_memory.rs  basic_performance.rs  benchmark_runner.rs  benchmark_utils.rs  cli_benchmarks.rs  comparison_analysis.rs  comprehensive_plugin_stress_suite.rs  daemon_benchmarks.rs  daemon_performance.rs  load_testing.rs  load_testing_framework.rs  memory_profiling.rs  performance_reporter.rs  phase6_test_validation.rs  phase6_test_validation_demo.rs  plugin_resource_exhaustion_tests.rs  plugin_stress_benchmarks.rs  plugin_stress_test_runner.rs  plugin_stress_testing_framework.rs  run_performance_tests.sh  scalability_testing.rs  script_engine_benchmarks.rs  script_engine_load_tests.rs  system_benchmarks.rs
benches/.cargo/: config.toml
benches/src/: main.rs
benches/tests/: benchmark_integration_tests.rs  benchmark_runner_tests.rs  benchmark_utils_tests.rs  edge_case_error_tests.rs  framework_performance_tests.rs  framework_performance_validation_tests.rs  individual_benchmark_tests.rs  load_test_config_validation_tests.rs  load_test_runner.rs  load_testing_edge_case_tests.rs  load_testing_integration_tests.rs  memory_profiling_tests.rs  memory_profiling_unit_tests.rs  metrics_collector_comprehensive_tests.rs  mock_script_engine_comprehensive_tests.rs  mod.rs  performance_reporter_tests.rs  phase6_test_validation_tests.rs  script_engine_load_tester_tests.rs  script_engine_load_tests.rs  test_runner.rs  tool_distribution_algorithm_tests.rs
crates/crucible-a2a/: Cargo.toml
crates/crucible-a2a/src/: lib.rs
crates/crucible-acp/: Cargo.toml  STATUS_UPDATE.md  TDD_CHAT_PLAN.md  TEST_RESULTS.md
crates/crucible-acp/examples/: test_streaming.rs
crates/crucible-acp/src/: acp_client.rs  chat.rs  client.rs  context.rs  discovery.rs  error.rs  filesystem.rs  history.rs  host.rs  lib.rs  mcp_host.rs  mock_agent.rs  protocol.rs  session.rs  streaming.rs  tools.rs  tracing_utils.rs
crates/crucible-acp/tests/: fixture_replay_test.rs  in_process_mcp_test.rs  integration_tests.rs  mcp_integration_test.rs  transport_negotiation_test.rs
crates/crucible-agents/: Cargo.toml
crates/crucible-agents/src/: handle.rs  lib.rs  token.rs
crates/crucible-agents/tests/: multi_turn_tests.rs  token_budget_property_tests.rs  token_budget_tests.rs  tool_execution_tests.rs
crates/crucible-benchmarks/: Cargo.toml
crates/crucible-benchmarks/benches/: graph_query_comparison.rs  resource_comparison.rs  scripting_comparison.rs  storage_comparison.rs  write_comparison.rs
crates/crucible-benchmarks/src/: fixtures.rs  lib.rs
crates/crucible-burn/: Cargo.toml  Dockerfile.test  TESTING_IMPLEMENTATION_PLAN.md
crates/crucible-burn/src/: lib.rs  main.rs
crates/crucible-burn/tests/: integration_tests.rs  performance_tests.rs
crates/crucible-cli/: AGENTS.md  CLI_SERVICE_INTEGRATION.md  Cargo.toml  MODES.md  README.md  crucible.toml
crates/crucible-cli/examples/: ink_demo.rs  oil_demo.rs  test_mcp_server.rs
crates/crucible-config/: Cargo.toml  example-config.toml
crates/crucible-context/: Cargo.toml
crates/crucible-core/: CONTENT_HASHER.md  Cargo.toml  crucible_state.json
crates/crucible-daemon/: .env.example  .env.test  Cargo.toml  EMBEDDING_TEST_INFRASTRUCTURE.md  INTEGRATION_TESTS.md  README.md
crates/crucible-daemon-client/: Cargo.toml
crates/crucible-desktop/: Cargo.toml
crates/crucible-enrichment/: Cargo.toml
crates/crucible-grammar/: Cargo.toml  FINDINGS.md
crates/crucible-just/: Cargo.toml
crates/crucible-lance/: Cargo.toml
crates/crucible-llm/: AGENT_CHAT_README.md  Cargo.toml  README.md
crates/crucible-lua/: Cargo.toml
crates/crucible-mcp/: Cargo.toml  README.md  test_simple_tool_macro.rn
crates/crucible-mcp-client/: Cargo.toml
crates/crucible-merkle/: Cargo.toml
crates/crucible-mock-agent/: Cargo.toml  README.md
crates/crucible-observe/: Cargo.toml
crates/crucible-oil/: Cargo.toml
crates/crucible-parser/: Cargo.toml
crates/crucible-pipeline/: Cargo.toml
crates/crucible-plugins/: Cargo.toml
examples/: .gitignore  Cargo.toml  FILES.md  README.md  custom_merkle_builder.rs  development-config.yaml  find_markdown_panic.rs  migration-example.md  minimal-config.json  production-config.yaml  testing-config.toml  validate-configs.sh  validate-examples.sh
examples/agent-cards/: general.md  kiln-specialist.md
examples/config/: README.md  config.example.toml  discovery.toml  embedding.toml  hooks.toml  mcps.toml  profiles.toml
examples/dev-kiln/: AI Features.md  Config.toml  Configuration.md  Extending Crucible.md  Index.md
examples/plugins/: README.md  categorizer.rn  custom-ui.lua  log_tool_calls.rn
examples/rune-hooks/: README.md  deploy.rn  enrich_recipes.rn  filter_test_output.rn
examples/test-kiln/: API Documentation.md  Book Review.md  Comprehensive-Feature-Test.md  Contact Management.md  Knowledge Management Hub.md  Meeting Notes.md  Phase1B-Integration-Test.md  README - Test Kiln Structure.md  Research Methods.md
(+5429 files in other folders)
