[workspace]
resolver = "2"
members = [
    "crates/crucible-core",
    "crates/crucible-parser",
    "crates/crucible-merkle",
    "crates/crucible-enrichment",
    "crates/crucible-pipeline",
    # "crates/crucible-tauri",  # Removed for CLI MVP - GUI not needed
    "crates/crucible-cli",
    "crates/crucible-sync",
    "crates/crucible-surrealdb",
    "crates/crucible-config",
    "crates/crucible-a2a",
    "crates/crucible-acp",
    "crates/crucible-mock-agent",
    "crates/crucible-llm",
    "crates/crucible-tools",
    "crates/crucible-watch",
    "examples",
]
default-members = ["crates/crucible-cli"]

# Rune-related crates (excluded from default build)
# To include: uncomment these and add rune dependencies back to workspace.dependencies
# members += [
#     "crates/crucible-plugins",
#     "crates/crucible-rune-macros",
# ]

[workspace.package]
version = "0.1.0"
authors = ["Matthew Krohn <matthew.d.krohn@gmail.com>"]
license = "Proprietary"
edition = "2021"
rust-version = "1.75"
description = "A high-performance knowledge management system with AI agent integration"
homepage = "https://github.com/crucible/crucible"
repository = "https://github.com/crucible/crucible"
keywords = ["knowledge-management", "ai", "collaboration", "crdt", "rust"]
categories = ["development-tools", "text-processing", "database"]

[workspace.dependencies]
yrs = "0.24"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
crucible-parser = { path = "crates/crucible-parser" }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.17"
# Rune (commented out - not needed for MVP)
# rune = "0.14"
# tauri = { version = "2.0", features = [] }  # Removed for CLI MVP - GUI not needed
regex = "1.12"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.14"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"

# Database dependencies

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Vector operations
ndarray = "0.16"

# Binary serialization
bincode = "2.0"

# JSON Schema validation
jsonschema = "0.33"
schemars = "1.0"

# Rune scripting language
# rune-modules = "0.14"

# Configuration management
config = "0.15"

# Performance utilities
dashmap = "6.1"
parking_lot = "0.12"
lazy_static = "1.4"

# File system watching
notify = "8.2"
notify-debouncer-full = "0.5"

# Additional utilities
globset = "0.4"
num_cpus = "1.16"
flume = "0.11"
pulldown-cmark = { version = "0.13", default-features = false }
markdown-it = "0.6"
toml = "0.9"
futures-util = "0.3"
tokio-stream = "0.1"
hostname = "0.4"

# Metrics and monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.15"

# Web framework for health checks
axum = "0.8"
tower = "0.5"

# Testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
trybuild = "1.0"
tokio-test = "0.4"
mockito = "1.0"
tracing-test = "0.2"
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.6"
mockall = "0.12"

# Database
surrealdb = { version = "2", features = ["kv-mem"] }
comfy-table = "7.2"

# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Additional utilities for event system
base64 = "0.22"

# Additional dependencies
rustc_version = "0.4"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1"

# CLI specific dependencies
indicatif = "0.18"
dirs = "6.0"
csv = "1.3"
nu-ansi-term = "0.50"
crossterm = "0.29"
reedline = "0.34"
ratatui = "0.29"

# Fuzzy search
nucleo = "0.5"
nucleo-matcher = "0.3.1"
nucleo-picker = "0.9"

# Internal workspace crates
crucible-core = { path = "crates/crucible-core" }
crucible-config = { path = "crates/crucible-config" }
crucible-acp = { path = "crates/crucible-acp" }
# crucible-rune-macros = { path = "crates/crucible-rune-macros" }
crucible-tools = { path = "crates/crucible-tools" }
crucible-llm = { path = "crates/crucible-llm" }
crucible-surrealdb = { path = "crates/crucible-surrealdb" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
debug = true
