[workspace]
resolver = "2"
exclude = ["vendor/markdown-it"]
members = [
    "crates/crucible-core",
    "crates/crucible-parser",
    "crates/crucible-enrichment",
    "crates/crucible-pipeline",
    "crates/crucible-cli",
    "crates/crucible-surrealdb",
    "crates/crucible-sqlite",
    "crates/crucible-config",
    "crates/crucible-acp",
    "crates/crucible-context",
    "crates/crucible-llm",
    "crates/crucible-tools",
    "crates/crucible-watch",
    "crates/crucible-lua",
    "crates/crucible-web",
    "crates/crucible-daemon",
    "crates/crucible-rpc",
    "crates/crucible-protocol",
    "crates/crucible-skills",
    "crates/crucible-rig",
    "crates/crucible-query",
    "crates/zellij-inbox",
    "crates/crucible-lance",
    "crates/crucible-benchmarks",
    "crates/crucible-observe",
    "crates/crucible-oil",
]
default-members = ["crates/crucible-cli"]

[workspace.package]
version = "0.1.0"
authors = ["Matthew Krohn <matthew.d.krohn@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"
description = "A high-performance knowledge management system with AI agent integration"
homepage = "https://github.com/Mootikins/crucible"
repository = "https://github.com/Mootikins/crucible"
keywords = ["knowledge-management", "ai", "collaboration", "crdt", "rust"]
categories = ["development-tools", "text-processing", "database"]

[workspace.dependencies]
yrs = "0.25"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
crucible-parser = { path = "crates/crucible-parser" }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.21", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "2.0.17"
# Rune (commented out - not needed for MVP)
# rune = "0.14"
# tauri = { version = "2.0", features = [] }  # Removed for CLI MVP - GUI not needed
regex = "1.12"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.25"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"

# Database dependencies

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "charset", "http2", "system-proxy"] }
urlencoding = "2.1"

# Vector operations
ndarray = "0.17"

# Binary serialization
bincode = "2.0"

# JSON Schema validation
jsonschema = "0.33"
schemars = "1.2"

# Rune scripting language
# rune-modules = "0.14"

# Configuration management
config = "0.15"

# Performance utilities
dashmap = "6.1"
parking_lot = "0.12"
lazy_static = "1.5"
rayon = "1.10"

# File system watching
notify = "8.2"
notify-debouncer-full = "0.7"

# Additional utilities
globset = "0.4"
num_cpus = "1.17"
flume = "0.12"
markdown-it = "0.6"
toml = "0.9"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
hostname = "0.4"

# Metrics and monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.15"

# Web framework for health checks
axum = "0.8"
tower = "0.5"

# MCP protocol
rmcp = { version = "0.15", features = ["macros", "server"] }

# Testing utilities
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.10"
trybuild = "1.0"
tokio-test = "0.4"
mockito = "1.7"
tracing-test = "0.2"
expectrl = "0.8"
assert_cmd = "2.1"
predicates = "3.1"
wiremock = "0.6"
mockall = "0.14"
test-case = "3.3"

# Database
surrealdb = { version = "2", features = ["kv-mem"] }
comfy-table = "7"

# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Additional utilities for event system
base64 = "0.22"

# Additional dependencies
rustc_version = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"

# CLI specific dependencies
indicatif = "0.18"
dirs = "6.0"
mlua = { version = "0.11", features = ["vendored", "lua54"] }
csv = "1.4"
nu-ansi-term = "0.50"
crossterm = { version = "0.29", features = ["event-stream"] }
# reedline removed - event architecture cleanup
# ratatui removed - event architecture cleanup

# Fuzzy search removed - was for TUI completion

# Internal workspace crates
crucible-core = { path = "crates/crucible-core" }
crucible-config = { path = "crates/crucible-config" }
crucible-acp = { path = "crates/crucible-acp" }
crucible-tools = { path = "crates/crucible-tools" }
crucible-llm = { path = "crates/crucible-llm", default-features = false }
crucible-skills = { path = "crates/crucible-skills" }
crucible-surrealdb = { path = "crates/crucible-surrealdb" }
crucible-lua = { path = "crates/crucible-lua" }
crucible-rig = { path = "crates/crucible-rig" }
crucible-web = { path = "crates/crucible-web" }
crucible-observe = { path = "crates/crucible-observe" }
crucible-daemon = { path = "crates/crucible-daemon" }
crucible-rpc = { path = "crates/crucible-rpc" }
crucible-oil = { path = "crates/crucible-oil" }
oq = "0.1"

# Workspace-level test feature flags
# These control which test tiers are enabled
# Usage: cargo test --features test-fixtures
[workspace.metadata.dist]
# Build only packages that opt-in
precise-builds = true
# Install scripts
installers = ["shell", "powershell"]
# Target platforms
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
# CI settings
ci = "github"
# Trigger on version tags
tag-namespace = "v"
# Don't build all workspace members by default
cargo-dist-version = "0.27.0"

[workspace.metadata.test-tiers]
# test-fixtures: Tests using docs/ kiln or examples/test-kiln
# test-infrastructure: Tests requiring Ollama, ACP agents (opencode/claude)
# test-slow: Performance benchmarks and timing-sensitive tests

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
debug = true

# Local patches for upstream crates with bugs
# See vendor/README.md for details
[patch.crates-io]
markdown-it = { path = "vendor/markdown-it" }
