[package]
name = "crucible-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[example]]
name = "custom_merkle_builder"
path = "custom_merkle_builder.rs"

[[example]]
name = "find_markdown_panic"
path = "find_markdown_panic.rs"

[dependencies]
crucible-core = { path = "../crates/crucible-core" }
crucible-enrichment = { path = "../crates/crucible-enrichment" }
md5 = "0.8"
markdown-it = "0.6.1"

[dev-dependencies]
