[package]
name = "crucible-a2a"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data structures
fixedbitset = "0.5"

# Error handling
anyhow = "1"
thiserror = "1"

# Rune scripting
rune = "0.14"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
