[package]
name = "crucible-acp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Agent Client Protocol integration for Crucible - MCP-compatible agent communication"

[lib]
name = "crucible_acp"
path = "src/lib.rs"

[dependencies]
# Core types and traits
crucible-core = { path = "../crucible-core" }

# Crucible tools for execution
crucible-tools = { path = "../crucible-tools" }

# Agent Client Protocol
agent-client-protocol = "0.7.0"

# Async runtime
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Traits
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Random ID generation
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

# Test binaries for integration testing
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true

[features]
default = []
# Enable test utilities (MockAgent) for integration tests in other crates
test-utils = []
