[package]
name = "crucible-acp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Agent Client Protocol integration for Crucible - MCP-compatible agent communication"

[package.metadata.dist]
dist = false

[lib]
name = "crucible_acp"
path = "src/lib.rs"

[dependencies]
# Core types and traits
crucible-core = { path = "../crucible-core" }

# Configuration types
crucible-config = { path = "../crucible-config" }

# Crucible tools for execution
crucible-tools = { path = "../crucible-tools" }

# TOON Query language for tabular encoding
oq = { workspace = true }

# MCP server transport
rmcp = { version = "0.9.1", features = ["macros", "server", "transport-sse-server"] }

# HTTP server for SSE (required for in-process MCP hosting)
axum = "0.8"

# Agent Client Protocol
agent-client-protocol = "0.9.3"

# Async runtime
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Traits
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Diff generation for write operations
similar = "2"

# Agent discovery
futures = { workspace = true }
once_cell = "1.21"

# Random ID generation
rand = { workspace = true }

# UUID generation (used for trace IDs and mock agent)
uuid = { version = "1.19", features = ["v4"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
which = "8.0"
regex = "1.12"

# Test binaries for integration testing
[[test]]
name = "integration"
path = "tests/integration/mod.rs"
harness = true

# Mock agent binary for integration tests
[[bin]]
name = "mock-acp-agent"
path = "tests/bin/mock-acp-agent.rs"
required-features = ["test-utils"]
test = false

[features]
default = []
# Enable test utilities (MockAgent) for integration tests in other crates
test-utils = []
