[package]
name = "crucible-agents"
version = "0.1.0"
edition = "2021"
description = "Internal agent system for Crucible"
license = "MIT OR Apache-2.0"

[dependencies]
crucible-core = { path = "../crucible-core" }
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
