[package]
name = "crucible-benchmarks"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish = false  # Benchmarks and contract tests, not published
description = "Benchmarks and contract tests for Crucible storage backends"

[dependencies]
# Core traits
crucible-core = { path = "../crucible-core" }

# Backend implementations (feature-gated)
crucible-sqlite = { path = "../crucible-sqlite", optional = true }
crucible-surrealdb = { path = "../crucible-surrealdb", optional = true, features = ["test-utils"] }
crucible-lance = { path = "../crucible-lance", optional = true }

# Scripting runtimes (feature-gated)
crucible-lua = { path = "../crucible-lua", optional = true }

# Test dependencies
tokio = { workspace = true, features = ["test-util", "full"] }
chrono = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rusqlite = { version = "0.37", features = ["bundled"] }

[features]
default = []
# Run contract tests against SQLite
sqlite = ["dep:crucible-sqlite"]
# Run contract tests against SurrealDB
surrealdb = ["dep:crucible-surrealdb"]
# Run contract tests against LanceDB
lance = ["dep:crucible-lance"]
# Scripting runtime benchmarks
lua = ["dep:crucible-lua"]

[lib]
# This crate is only for tests - no library code
path = "src/lib.rs"

[[test]]
name = "note_store_contract"
path = "tests/note_store_contract.rs"
required-features = []  # Tests have their own cfg guards

[[bench]]
name = "storage_comparison"
harness = false

[[bench]]
name = "vector_search_comparison"
harness = false

[[bench]]
name = "graph_query_comparison"
harness = false

[[bench]]
name = "resource_comparison"
harness = false

[[bench]]
name = "write_comparison"
harness = false

[[bench]]
name = "scripting_comparison"
harness = false
