[package]
name = "crucible-burn"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Burn ML framework integration and testing for Crucible"

[[bin]]
name = "burn-test"
path = "src/main.rs"

[dependencies]
# Core workspace dependencies
crucible-core = { path = "../crucible-core" }
crucible-config = { path = "../crucible-config" }

# Burn ML framework (temporarily disabled for compatibility)
# burn = { version = "0.14", features = ["std", "ndarray"] }
# burn-wgpu = { version = "0.14", optional = true }

# Hardware detection and GPU support (placeholders for now)
# wgpu = { version = "0.19", optional = true }
# ash = { version = "0.37", optional = true }  # For Vulkan API detection

# CLI framework (following crucible-cli patterns)
clap = { workspace = true, features = ["derive", "env", "string"] }

# HTTP server for inference API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Benchmarking
criterion = { workspace = true, optional = true, features = ["html_reports"] }

# File system and paths
dirs = { workspace = true }
walkdir = "2.4"

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Configuration management
config = { workspace = true }

# CPU core detection
num_cpus = { workspace = true }

# Performance utilities
parking_lot = { workspace = true }

# Optional PyTorch dependency for ROCm support
tch = { version = "0.15", optional = true }

[features]
default = []
# Placeholder features for when Burn integration is ready
vulkan = []
server = []
benchmarks = ["criterion"]

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

