[package]
name = "crucible-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cru"
path = "src/main.rs"

[features]
default = []

[dependencies]
crucible-core = { path = "../crucible-core" }
crucible-parser = { path = "../crucible-parser" }
crucible-surrealdb = { path = "../crucible-surrealdb" }
crucible-config = { path = "../crucible-config", features = ["toml"] }
crucible-llm = { path = "../crucible-llm" }
crucible-pipeline = { path = "../crucible-pipeline" }
crucible-tools = { path = "../crucible-tools" }
crucible-acp = { path = "../crucible-acp" }
crucible-agents = { path = "../crucible-agents" }
crucible-enrichment = { path = "../crucible-enrichment" }
crucible-merkle = { path = "../crucible-merkle" }
crucible-watch = { path = "../crucible-watch" }

# CLI framework
clap = { workspace = true, features = ["derive", "env", "string"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Table formatting
tabled = "0.15"

# Date/time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Lazy statics
once_cell = "1.21"

# Output formatting
comfy-table = { workspace = true }
colored = { workspace = true }

# Interactive UI
indicatif = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


# Rune scripting for dynamic tools
crucible-rune = { workspace = true }

# File system utilities
walkdir = "2.4"

# Rune scripting
# rune = { workspace = true }  # Commented out - not MVP critical

# Fuzzy search removed - was for TUI completion

# Additional dependencies for REPL
csv = { workspace = true }
nu-ansi-term = { workspace = true }
regex = { workspace = true }

# Path manipulation
dirs = { workspace = true }

# Configuration
toml = { workspace = true }


# Markdown parsing for terminal rendering
markdown-it = { workspace = true }

# HTTP client & streaming
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }

# Terminal utilities (kept for progress.rs, markdown_renderer.rs)
crossterm = { workspace = true }
ratatui = "0.29"

# Markdown rendering with syntax highlighting
termimad = "0.30"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Diff rendering
similar = "2.7"

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# File watching
notify = { workspace = true }
notify-debouncer-mini = "0.7"

# Concurrency
parking_lot = { workspace = true }
nucleo = "0.5.0"

[dev-dependencies]
crucible-config = { path = "../crucible-config", features = ["test-utils"] }
# MCP client for testing examples
rmcp = { version = "0.9.0", features = ["client", "transport-child-process"] }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
toml = { workspace = true }
blake3 = "1.5"  # For hash verification tests
serial_test = "3.2"  # For preventing parallel test execution with shared env vars
scopeguard = "0.3"  # For RAII-style cleanup in tests

# Additional dependencies for resource constraint testing
rand = "0.8"
nix = { version = "0.27", features = ["fs"] }

# File locking for concurrent test serialization
fs2 = "0.4"
