[package]
name = "crucible-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cru"
path = "src/main.rs"

[lib]
doctest = false

[package.metadata.dist]
dist = true
features = ["storage-sqlite"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/crucible-v{ version }-{ target }.tar.gz"
bin-dir = "crucible-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[features]
default = ["storage-surrealdb", "fastembed", "web"]

# Web UI integration
web = ["dep:crucible-web"]

# Storage backend selection (mutually exclusive in practice)
storage-surrealdb = ["dep:crucible-surrealdb"]
storage-sqlite = ["dep:crucible-sqlite"]

# Local embedding support (includes ONNX Runtime download)
fastembed = ["crucible-llm/fastembed", "crucible-tools/fastembed"]

# Rendering pipeline selection
taffy-render = []  # Use new Taffy-based layout pipeline (experimental)

# Test tier flags (see justfile for usage)
test-fixtures = []       # Tests using docs/ kiln or examples/test-kiln
test-infrastructure = [] # Tests requiring Ollama, ACP agents (opencode/claude)
test-slow = []           # Performance benchmarks and timing tests
test-utils = []          # Expose testing utilities for integration tests

[dependencies]
crucible-core = { path = "../crucible-core" }
crucible-surrealdb = { path = "../crucible-surrealdb", optional = true }
crucible-sqlite = { path = "../crucible-sqlite", optional = true }
crucible-config = { path = "../crucible-config", features = ["toml"] }
crucible-llm = { path = "../crucible-llm", default-features = false }
crucible-lua = { path = "../crucible-lua" }
crucible-pipeline = { path = "../crucible-pipeline" }
crucible-tools = { path = "../crucible-tools" }
crucible-acp = { path = "../crucible-acp" }
crucible-context = { path = "../crucible-context" }
crucible-rig = { path = "../crucible-rig" }
crucible-enrichment = { path = "../crucible-enrichment" }
crucible-watch = { path = "../crucible-watch" }
crucible-daemon = { path = "../crucible-daemon" }
crucible-rpc = { path = "../crucible-rpc" }
crucible-skills = { path = "../crucible-skills" }
crucible-lance = { path = "../crucible-lance" }
crucible-observe = { path = "../crucible-observe" }
crucible-oil = { path = "../crucible-oil" }
crucible-web = { path = "../crucible-web", optional = true }

# CLI framework
clap = { workspace = true, features = ["derive", "env", "string"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client for provider detection
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Table formatting
tabled = "0.20"

# Date/time handling
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Lazy statics
once_cell = "1.21"

# Output formatting
comfy-table = { workspace = true }
colored = { workspace = true }

# Interactive UI
indicatif = { workspace = true }
dialoguer = "0.12"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


# File system utilities
walkdir = "2.5"

# Rune scripting
# rune = { workspace = true }  # Commented out - not MVP critical

# Fuzzy search removed - was for TUI completion

# Additional dependencies for REPL
regex = { workspace = true }

# Path manipulation
dirs = { workspace = true }
shellexpand = "3.1"

# Unicode width for proper character display width calculation
unicode-width = "0.2"

# Markdown parsing for terminal rendering
markdown-it = { workspace = true }

# Async utilities
futures = { workspace = true }

# Terminal utilities (crossterm for ink TUI)
crossterm = { workspace = true }

# Diff rendering
similar = "2.7"

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Text wrapping
textwrap = "0.16.2"

# Flexbox layout for ink TUI
taffy = "0.9"

# Lua scripting (for lua_view)
mlua = { workspace = true }

[dev-dependencies]
crucible-cli = { path = ".", features = ["test-utils"] }  # Enable test utilities
crucible-config = { path = "../crucible-config", features = ["test-utils"] }
rune = "0.14"  # For NoteStore integration tests
# MCP client for testing examples
rmcp = { version = "0.14", features = ["client", "transport-child-process"] }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }
toml = { workspace = true }
blake3 = "1.8"  # For hash verification tests
serial_test = "3.3"  # For preventing parallel test execution with shared env vars
scopeguard = "1.2"  # For RAII-style cleanup in tests
insta = { version = "1.46", features = ["filters"] }  # Snapshot testing for TUI
expectrl = { workspace = true }  # PTY-based TUI testing
vt100 = "0.15"  # Terminal emulation for queryable screen buffer in E2E tests
proptest = "1.10"  # Property-based testing for graduation invariants
test-case = "3.3"  # Parameterized tests

# Additional dependencies for resource constraint testing
rand = "0.9"
# Unix-only resource constraint testing
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31", features = ["fs"] }

# File locking for concurrent test serialization
fs2 = "0.4"
